--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ footer ul{
 }
 
 /* mobile devices */
-@media screen and (max-width:600px){
+@media only screen and (max-width:600px){
     .container{
         max-width: 100%;
     }
