--- a/style.css
+++ b/style.css
@@ -292,8 +292,11 @@ footer ul{
         flex-direction: column;
     }
     .banner-left h1{
-        text-align:center;
+        
         font-size:18px;
+    }
+    .watch-btn{
+        text-align:center;
     }
     .banner-left p,.watch-btn{
         text-align:center;
