--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ footer ul{
         flex-direction: column;
     }
     .banner-left h1{
-        
+        text-align:center;
         font-size:18px;
     }
     .watch-btn{
