--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ footer ul{
     header{
         display: flex;
         flex-direction: column;
-        margin:50px 0 40px;
+        margin:0;
         padding-top: 5%;
         padding-left:0;
         padding-right: 0;
@@ -332,7 +332,7 @@ footer ul{
           padding-right: 0;
     }
     footer hr{
-        width:310px;
+        width:330px;
     
     }
     .footer-content .footer-content-details{
