--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ footer ul{
     }
     .watch-btn{
         text-align:center;
-        margin: 0 auto;
+        margin-right: 20px;
     }
     .banner-left p{
         text-align:center;
