--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ footer ul{
     }
     .watch-btn{
         text-align:center;
-        margin-left:30px; 
+        margin-left:20px; 
     }
     .banner-left p{
         text-align:center;
@@ -426,7 +426,7 @@ footer ul{
       width:490px;
   
   }
-  .social-media-icons li{
-    font-size: 20px;
+  .footer-content-details a{
+    font-size:30px;
   }
 }
