--- a/style.css
+++ b/style.css
@@ -316,7 +316,8 @@ footer ul{
         
     }
     .all-buttons{
-        background-color:white;
+        border: 1px solid gray;
+        /* background-color:white; */
         text-align: center;
         margin: 0 auto;
     }
