--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ footer ul{
     }
     .all-buttons a{
         padding: 15px 68px;
-        
+        text-align: center;
         
     }
     .button a{
